--- a/favourites.html
+++ b/favourites.html
@@ -7,7 +7,7 @@
 <body>
     <h3><strong>Favourites</strong></h3>
     <ol>
-       <li><strong>Person:</strong>Parents,Sanjay,Navadeep,Niveditha</li>
+       <li><strong>Person:</strong>Parents,Vaishnavi😉,Sanjay,Navadeep,Niveditha</li>
        <li><strong>Colour:</strong>Black and violet</li>
        <li><strong>Food:</strong>fastfood</li>
        <li><strong>Drinks:</strong><a href="https://unsplash.com/s/photos/tea"target="_blank">Tea</a></li>
